<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">掌中湖警</string>
    <string name="action_settings">Settings</string>
    <string name="app_title_user">掌中◇湖警</string>
    <string name="app_strat">程序正在启动中</string>
    <string name="copyright">Copyright 2015 liuyexuyu</string>
    <string name="tv_login_account">账 号</string>
    <string name="et_login_hint_pwd">请输入密码</string>
    <string name="btn_login_login">登  陆</string>
    <string name="cb_login_remmberpwd">记住密码</string>
    <string name="tv_login_resetpwd">重置密码</string>
    <string name="tv_login_signup">没有账号？现在加入...</string>
    <string name="tv_login_pwd">密 码</string>
    <string name="tv_signup_verifypwd">确  认</string>
    <string name="tv_signup_email">邮 箱</string>
    <string name="btn_signup_signupnow">现在加入</string>
    <string name="mainui_tab_zhangzishi">涨姿势</string>
    <string name="mainui_tab_geren">关于我</string>
    <string name="mainui_tab_zuoxueba">做学霸</string>
    <string name="mainui_tab_aishenghuo">爱生活</string>

</resources>
