<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"  
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >
<!-- xmlns:tools="http://schemas.android.com/tools" -->
    <ImageView
        android:layout_width="188dp"
        android:layout_height="166dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="90dp"
        android:src="@drawable/hbpa_a_normal"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/app_title_user"
        android:textColor="#ff33aa33"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tv_start_text"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/app_strat"
        android:textColor="#ff1E90FF"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginBottom="3dp"
        android:layout_marginRight="5dp"
        android:text="@string/copyright" />

</LinearLayout>