<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login" >

    <ImageView
        android:id="@+id/iv_login_ic"
        android:layout_width="150dp"
        android:layout_height="140dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:background="@drawable/hbpa_ic" />

    <LinearLayout
        android:id="@+id/liner_login_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_login_ic"
        android:layout_marginTop="138dp"
        android:orientation="horizontal" 
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp">

        <TextView
            android:background="@drawable/tv_login_leftradius"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:text="@string/tv_login_account" 
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"/>

        <EditText
            android:id="@+id/et_login_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/et_login_rightradius"
            android:ems="10"
            android:singleLine="true"
            android:hint="用户名/邮箱"
            android:inputType="text"
            android:padding="4dp"
            android:textColorHint="#AAAAAA"
            android:textSize="18sp" >

            <requestFocus />
        </EditText>
    </LinearLayout>

     <LinearLayout
        android:id="@+id/liner_login_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/liner_login_account"
        android:layout_marginTop="8dp"
        android:orientation="horizontal" 
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp">

        <TextView
            android:background="@drawable/tv_login_leftradius"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:text="@string/tv_login_pwd" 
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"/>

        <EditText
            android:id="@+id/et_login_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/et_login_rightradius"
            android:ems="10"
            android:hint="密码"
            android:inputType="textPassword"
            android:padding="4dp"
            android:singleLine="true"
            android:textColorHint="#AAAAAA"
            android:textSize="18sp" >

        </EditText>
    </LinearLayout> 

   <LinearLayout
        android:id="@+id/liner_login_btnlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/liner_login_pwd"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="12dp" >
        
        <Button
            android:id="@+id/btn_login_login"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/btn_login"
            android:gravity="center"
            android:text="@string/btn_login_login"
            android:textSize="18sp" />
       
    </LinearLayout>
    
   <LinearLayout 
       android:id="@+id/liner_login_ct"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@id/liner_login_btnlogin"
       android:orientation="horizontal"
       android:layout_marginLeft="45dp"
       android:layout_marginRight="50dp"
       android:layout_marginTop="20dp">

        <CheckBox
            android:id="@+id/cb_login_remmberpwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/checkbox_bg"
            android:text="@string/cb_login_remmberpwd" 
            android:drawablePadding="1dp"
            android:textSize="18sp"/>
        <View 
            android:layout_weight="1.0"
            android:layout_width="0dp"
            android:layout_height="20dp"/>
        
        <TextView 
            android:id="@+id/tv_login_resetpwb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_login_resetpwd"
            android:textSize="18sp"
            android:textColor="#ff000000"
            android:layout_gravity="center_vertical|right"/>
       
   </LinearLayout>
   <LinearLayout 
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@id/liner_login_ct"
       android:orientation="horizontal"
       android:layout_marginLeft="45dp"
       android:layout_marginRight="50dp"
       android:layout_marginTop="40dp"
       android:gravity="center">
       <TextView 
       android:layout_height="wrap_content"
       android:layout_width="wrap_content"
       android:gravity="center"
       android:drawableLeft="@drawable/sikao"
       android:drawablePadding="5dp"
       android:textSize="20sp"
       android:clickable="true"/>
       <Button 
       android:id="@+id/btn_login_signup"
       android:layout_height="wrap_content"
       android:layout_width="wrap_content"
       android:gravity="center"
       android:textSize="20sp"
       android:text="@string/tv_login_signup" 
       android:background="#0000"/>
    
   </LinearLayout>
   

</RelativeLayout>